--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <input
                 type="text"
                 class="form-control"
-                placeholder="Please Enter Task"
+                placeholder="Ajouter une Tâche"
                 aria-label="Recipient's username"
                 aria-describedby="button-addon2" id="input-task"
               />
