--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <link
       rel="stylesheet"
+      
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
       crossorigin="anonymous"
@@ -30,18 +31,8 @@
           <div class="card-body">
             <h5 class="card-title">My Todolist</h5>
             <div class="input-group mb-3">
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Ajouter une Tâche"
-                aria-label="Recipient's username"
-                aria-describedby="button-addon2" id="input-task"
-              />
-              <button
-                class="btn btn-outline-secondary"
-                type="button"
-                id="add-task"
-              >
+              <input  type="text" class="form-control"placeholder="Ajouter une Tâche"aria-label="Recipient's username"aria-describedby="button-addon2" id="input-task" />
+              <button class="btn btn-outline-secondary" type="button" id="add-task" >
                 <i class="fa-solid fa-plus"></i>
               </button>
                <button class="btn btn-success" type="button"  id="tasksBtn">Listes Taches</button>
